--- a/csss/css.css
+++ b/csss/css.css
@@ -1,4 +1,5 @@
-    <style>        :root {
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');     :root {
             --primary-color: #131E24;
             --secondary-color: #f7de58;
             --accent-color: #209346;
